Enabling Java 9/10 support for build and launcher scripts #674